LW items, STD: Fix caps, add dividers

--- a/misc/lightitems.html
+++ b/misc/lightitems.html
@@ -125,27 +125,37 @@ toc:
 	<h3>Dropping an item</h3>
 	<h4>Normal</h4>
 	<d-box theme="light">
-		<d-text asterisk>The &lt;ITEM&gt; was thrown away.</d-text>
+		<d-text asterisk>The &lt;Item&gt; was thrown away.</d-text>
 	</d-box>
+
+	<hr class="hrhalf">
 
 	<h4>Rare messages</h4>
 	<p>Each of the following messages has a 1 in 30 chance to override the normal drop text.</p>
 
 	<d-box theme="light">
-		<d-text asterisk>You bid a quiet farewell to the &lt;ITEM&gt;.</d-text>
+		<d-text asterisk>You bid a quiet farewell to the &lt;Item&gt;.</d-text>
 	</d-box>
 
-	<d-box theme="light">
-		<d-text asterisk>You put the &lt;ITEM&gt; on the ground and gave it a little pat.</d-text>
-	</d-box>
+	<hr class="hr2">
 
 	<d-box theme="light">
-		<d-text asterisk>You threw the &lt;ITEM&gt; on the ground like the piece of trash it is.</d-text>
+		<d-text asterisk>You put the &lt;Item&gt; on the ground and gave it a little pat.</d-text>
 	</d-box>
 
+	<hr class="hr2">
+
 	<d-box theme="light">
-		<d-text asterisk>You abandoned the &lt;ITEM&gt;.</d-text>
+		<d-text asterisk>You threw the &lt;Item&gt; on the ground like the piece of trash it is.</d-text>
 	</d-box>
+
+	<hr class="hr2">
+
+	<d-box theme="light">
+		<d-text asterisk>You abandoned the &lt;Item&gt;.</d-text>
+	</d-box>
+
+	<hr class="hrhalf">
 
 	<h4>Attempting to drop a weapon</h4>
 	<p>During Chapter 4.</p>
