DW/LW items: Add each other to see also

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -7,6 +7,11 @@ description: >
   <p>Usage messages including "&lt;Character&gt;" can substitute the names "Kris"/"Susie"/"Ralsei"/"Noelle", depending on who the item was used on.</p>
   <p>Any heal amounts listed on this page are the base values, not adjusted by heal-buffing equipment like the Blue Ribbon.</p>
 
+see_also:
+  -
+    url: /misc/lightitems
+    name: Light World items
+
 sources:
   -
     name: gml_Object_obj_darkcontroller_Step_0
