--- a/misc/lightitems.html
+++ b/misc/lightitems.html
@@ -4,6 +4,11 @@ title: Light World items
 description: >
   <p>Descriptions and usage/drop text for Light World items.</p>
 
+see_also:
+  -
+    url: /misc/darkitems
+    name: Dark World items{END_LINK} (includes key items)
+
 sources:
   -
     name: gml_GlobalScript_scr_litemname
