Document Ch2 Cyber City up to Berdly fight

--- a/story/index.html
+++ b/story/index.html
@@ -84,7 +84,7 @@ items:
           -
             url: arcadegame
             name: Playing arcade games with Queen
-          # TODO: Initial Dark World scenes
+          # TODO: Remaining Field scenes…?
           -
             url: sweetcapncakes
             name: Meeting Sweet Cap'n Cakes
@@ -110,7 +110,16 @@ items:
           -
             url: evilvillain
             name: Heart-to-heart with Queen
-          # SCC savepoint to the first part of the queen/noelle car ride
+          -
+            url: city3
+            name: Annoying Mouse Room 2
+          -
+            url: city4
+            name: Cheese maze and Annoying Mouse Room 3
+          -
+            url: secondalleyway
+            name: Encountering Berdly with Noelle
+          # first part of the queen/noelle car ride
           -
             url: spamton
             name: Meeting Spamton
