Armor: Clarify Ralsei BlueRBN message

--- a/misc/armor.html
+++ b/misc/armor.html
@@ -1066,6 +1066,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 
 	<h4 id="blueribbon-react-ralsei">Ralsei</h4>
+	<p>(Spells out the message "KRIS & SUSIE ARE MY FRIENDS!")</p>
 	<h5>First time</h5>
 	<d-box theme="objreact">
 		<d-speaker>Ralsei</d-speaker>
