Document Ch2 part 1 of drive with Queen

--- a/story/index.html
+++ b/story/index.html
@@ -119,7 +119,9 @@ items:
           -
             url: secondalleyway
             name: Encountering Berdly with Noelle
-          # first part of the queen/noelle car ride
+          -
+            url: drive1
+            name: Driving with Queen, part 1
           -
             url: spamton
             name: Meeting Spamton
