Document Ch2 part 2 of drive with Queen

--- a/story/index.html
+++ b/story/index.html
@@ -125,7 +125,10 @@ items:
           -
             url: spamton
             name: Meeting Spamton
-          # drive part 2 to reaching the mansion
+          -
+            url: drive2
+            name: Driving with Queen, part 2
+          # december flashback to reaching the mansion
       -
         name: Queen's Mansion
         sublist:
