Add AGREE2ALL link to story index

--- a/story/index.html
+++ b/story/index.html
@@ -84,10 +84,13 @@ items:
           -
             url: arcadegame
             name: Playing arcade games with Queen
-          # TODO: Remaining Field scenes…?
+          -
+            url: agree2all
+            name: Solving the keyboard puzzle
           -
             url: sweetcapncakes
             name: Meeting Sweet Cap'n Cakes
+          # TODO: Remaining Field scenes…?
           -
             url: rollercoasters
             name: Riding rollercoasters
