Document Ch2 DECEMBER reminiscing

--- a/story/index.html
+++ b/story/index.html
@@ -131,7 +131,10 @@ items:
           -
             url: drive2
             name: Driving with Queen, part 2
-          # december flashback to reaching the mansion
+          -
+            url: DECEMBER
+            name: Noelle reminisces
+          # party reunites to reaching the mansion
       -
         name: Queen's Mansion
         sublist:
