POWER menu: Fix DECEMBER page caps

--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -1064,7 +1064,7 @@ toc:
 				<li>18 after the <a href="{{ '/story/chapter2/drive1' | relative_url }}">first half of the car ride with Queen</a></li>
 				<li>33 after the <a href="{{ '/story/chapter2/spamton' | relative_url }}">Spamton fight</a></li>
 				<li>48 after the <a href="{{ '/story/chapter2/drive2' | relative_url }}">second half of the car ride with Queen</a></li>
-				<li>60 after the <a href="{{ '/story/chapter2/december' | relative_url }}">puzzle spelling out "DECEMBER"</a></li>
+				<li>60 after the <a href="{{ '/story/chapter2/DECEMBER' | relative_url }}">puzzle spelling out "<span class="yellow fnt-condensed">DECEMBER</span>"</a></li>
 				<li>63 after <a href="{{ '/story/chapter2/reunion' | relative_url }}">the party reunites</a></li>
 				<li>75 after <a href="{{ '/story/chapter2/mansionexterior' | relative_url }}">the party is captured by Queen</a></li>
 			</ul>
