Document Ch2 party reunion pre-mansion

--- a/story/index.html
+++ b/story/index.html
@@ -134,7 +134,10 @@ items:
           -
             url: DECEMBER
             name: Noelle reminisces
-          # party reunites to reaching the mansion
+          -
+            url: reunion
+            name: Reuniting with Susie and Ralsei
+          # reaching the mansion
       -
         name: Queen's Mansion
         sublist:
