--- a/story/index.html
+++ b/story/index.html
@@ -137,7 +137,9 @@ items:
           -
             url: reunion
             name: Reuniting with Susie and Ralsei
-          # reaching the mansion
+          -
+            url: mansionexterior
+            name: Reaching Queen's mansion
       -
         name: Queen's Mansion
         sublist:
