Combine Ch2 drive to DECEMBER pages
Spamton, Drive pt.2, and DECEMBER pages are very short. Latter two didn't even have separate sections. Also the City section of Ch2 was getting really long

--- a/encounters/spamton.html
+++ b/encounters/spamton.html
@@ -22,7 +22,7 @@ credits: >
 
 see_also:
   -
-    url: /story/chapter2/spamton
+    url: /story/chapter2/drive#spamton
     name: Pre- & post-fight cutscenes
   -
     url: /encounters/spamtonneo
@@ -542,7 +542,7 @@ toc:
 				<d-speaker>Spamton</d-speaker>
 				<d-text>PLEASURE DOING<span class="break"></span> BUSINESS WITH<span class="break"></span> YOU KID!!!</d-text>
 			</d-box>
-			<p class="note"><a href="{{ '/story/chapter2/spamton#postfight-nonviolent' | relative_url }}">The encounter ends here.</a></p>
+			<p class="note"><a href="{{ '/story/chapter2/drive#postfight-nonviolent' | relative_url }}">The encounter ends here.</a></p>
 		</d-option-panel>
 	</d-option-panel>
 </section>
