--- a/story/index.html
+++ b/story/index.html
@@ -109,7 +109,6 @@ items:
           -
             url: city2
             name: Festival dates and forcefield puzzle
-          # SCC to switch puzzle
           -
             url: evilvillain
             name: Heart-to-heart with Queen
@@ -123,17 +122,8 @@ items:
             url: secondalleyway
             name: Encountering Berdly with Noelle
           -
-            url: drive1
-            name: Driving with Queen, part 1
-          -
-            url: spamton
-            name: Meeting Spamton
-          -
-            url: drive2
-            name: Driving with Queen, part 2
-          -
-            url: DECEMBER
-            name: Noelle reminisces
+            url: drive
+            name: Driving with Queen, meeting Spamton, and Noelle reminiscing
           -
             url: reunion
             name: Reuniting with Susie and Ralsei
