--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -1061,10 +1061,10 @@ toc:
 				<li>9 after the <a href="{{ '/story/chapter2/city3#annoyingmouseroom2' | relative_url }}">second mouse puzzle</a></li>
 				<li>12 after the <a href="{{ '/story/chapter2/city4#annoyingmouseroom3' | relative_url }}">third mouse puzzle</a></li>
 				<li>15 after the <a href="{{ '/story/chapter2/secondalleyway' | relative_url }}">second Berdly fight</a></li>
-				<li>18 after the <a href="{{ '/story/chapter2/drive1' | relative_url }}">first half of the car ride with Queen</a></li>
-				<li>33 after the <a href="{{ '/story/chapter2/spamton' | relative_url }}">Spamton fight</a></li>
-				<li>48 after the <a href="{{ '/story/chapter2/drive2' | relative_url }}">second half of the car ride with Queen</a></li>
-				<li>60 after the <a href="{{ '/story/chapter2/DECEMBER' | relative_url }}">puzzle spelling out "<span class="yellow fnt-condensed">DECEMBER</span>"</a></li>
+				<li>18 after the <a href="{{ '/story/chapter2/drive#trafficjam' | relative_url }}">first half of the car ride with Queen</a></li>
+				<li>33 after the <a href="{{ '/story/chapter2/drive#spamton' | relative_url }}">Spamton fight</a></li>
+				<li>48 after the <a href="{{ '/story/chapter2/drive#drive2' | relative_url }}">second half of the car ride with Queen</a></li>
+				<li>60 after the <a href="{{ '/story/chapter2/drive#DECEMBER' | relative_url }}">puzzle spelling out "<span class="yellow fnt-condensed">DECEMBER</span>"</a></li>
 				<li>63 after <a href="{{ '/story/chapter2/reunion' | relative_url }}">the party reunites</a></li>
 				<li>75 after <a href="{{ '/story/chapter2/mansionexterior' | relative_url }}">the party is captured by Queen</a></li>
 			</ul>
