DW items: Add description to key item source

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -35,6 +35,7 @@ sources:
   -
     name: gml_GlobalScript_scr_keyiteminfo
     chapters: [1, 2, 3, 4]
+    note: key item descriptions
   -
     name: gml_GlobalScript_scr_itemuse
     chapters: [1, 2, 3, 4]
