Document Ch2 mansion jailbreak

--- a/story/index.html
+++ b/story/index.html
@@ -133,7 +133,10 @@ items:
       -
         name: Queen's Mansion
         sublist:
-          # escaping rooms to susie/berdly going after noelle
+          -
+            url: roomescape
+            name: Escaping the personalized rooms
+          # 1F to susie/berdly going after noelle
           -
             url: acidtunnel
             name: Crossing the acid tunnel
