Document Color Cafe

--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -32,6 +32,12 @@ items:
     name: Queen's Mansion
     sublist:
       -
+        name: 1F
+        sublist:
+          -
+            url: colorcafe
+            name: Color Cafe
+      -
         url: basement
         name: Basement
 ---
