--- a/locations/cyberworld/cybercity/spamtonshop.html
+++ b/locations/cyberworld/cybercity/spamtonshop.html
@@ -135,7 +135,7 @@ toc:
 	<d-box theme="shopleft">
 		<d-speaker>Spamton</d-speaker>
 		<d-text asterisk>HEY EVERY &nbsp; &nbsp; &nbsp; !</d-text>
-		<d-text asterisk>IT'S ME, SPAMTON G.<span class="break"></span> <span class="break"></span>SPAMTON!</d-text>
+		<d-text asterisk>IT'S ME, SPAMTON G.<br/><br/> SPAMTON!</d-text>
 	</d-box>
 
 	<hr>
@@ -153,7 +153,7 @@ toc:
 	<p>Prices are listed as "&lt;#&gt; KROMER" and fluctuate every half-second. Your current money is also listed as "&lt;#&gt; KROMER". The usual "Exit" option instead reads, in an oversized font, "RUN AWAY".</p>
 
 	<h3 id="itemlist">Items for sale</h3>
-	<h4 id="darkcandy">KeyGen</h4>
+	<h4>KeyGen</h4>
 	<d-box theme="shopdesc">
 		<d-text>KEYITEM </d-text>
 		<d-text>100%<span class="break"></span> CERTIFIED<span class="break"></span> WAREZ</d-text>
