Mark Manual as unavailable for selling from Ch2 onwards

--- a/locations/tvworld/greenroom/rewardsroom.html
+++ b/locations/tvworld/greenroom/rewardsroom.html
@@ -350,7 +350,7 @@ toc:
 	<h4 id="sellspecial">Trying to sell special items</h4>
 	<p>Special items include:</p>
 	<ul>
-		<li><a href="{{ '/misc/darkitems#manual' | relative_url }}">The Manual</a></li>
+		<li><a href="{{ '/misc/darkitems#manual' | relative_url }}">The Manual</a> (unavailable by this point)</li>
 		<li><a href="{{ '/misc/armor#jevilstail' | relative_url }}">Jevilstail</a> & <a href="{{ '/misc/weapons#devilsknife' | relative_url }}">Devilsknife</a></li>
 		<li><a href="{{ '/misc/armor#dealmaker' | relative_url }}">Dealmaker</a> & <a href="{{ '/misc/weapons#puppetscarf' | relative_url }}">Puppet Scarf</a></li>
 		<li><a href="{{ '/misc/weapons#thornring' | relative_url }}">Thorn Ring</a></li>
