Document Queen's mansion's guest hall

--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -35,6 +35,9 @@ items:
         name: 1F
         sublist:
           -
+            url: guesthall
+            name: Guest Hall
+          -
             url: colorcafe
             name: Color Cafe
       -
