Add mansion entrance see-alsos to Cafe/Guest Hall
Also adjust URL for that in the TODO and elsewhere

--- a/locations/cyberworld/queenmansion/colorcafe.html
+++ b/locations/cyberworld/queenmansion/colorcafe.html
@@ -116,6 +116,11 @@ toc:
   -
     id: exit
     name: Exit
+
+see_also:
+  -
+    url: /locations/cyberworld/queenmansion/entrance
+    name: Queen's mansion - Entrance
 ---
 <section class="d-section" id="mainscreen">
 	<h2>Main screen</h2>
