--- a/locations/cyberworld/queenmansion/guesthall.html
+++ b/locations/cyberworld/queenmansion/guesthall.html
@@ -155,6 +155,11 @@ toc:
       -
         id: lancer
         name: Lancer
+
+see_also:
+  -
+    url: /locations/cyberworld/queenmansion/entrance
+    name: Queen's mansion - Entrance
 ---
 <section class="d-section" id="krisroom">
 	<h2>Kris's room</h2>
