Fix Spamton shop TOC
Looks like the Seam TOC was leftover from the original file copying. I gotta make a shop template...

--- a/locations/cyberworld/cybercity/spamtonshop.html
+++ b/locations/cyberworld/cybercity/spamtonshop.html
@@ -34,7 +34,7 @@ toc:
         name: After exiting a menu
   -
     id: buy
-    name: Buy
+    name: BUY
     subheadings:
       -
         id: itemlist
@@ -42,6 +42,9 @@ toc:
       -
         id: initialbuy
         name: Initial buying
+      -
+        id: considerbuy
+        name: Considering a purchase
       -
         id: confirmbuy
         name: Making a purchase
@@ -55,77 +58,35 @@ toc:
         id: storagefull
         name: Storage full
   -
-    id: sell
-    name: Sell
-    subheadings:
-      -
-        id: sellitem
-        name: Initial item sale screen
-      -
-        id: sellweapon
-        name: Initial weapon sale screen
-      -
-        id: sellarmor
-        name: Initial armor sale screen
-      -
-        id: sellempty
-        name: Selling with empty inventory
-      -
-        id: confirmsale
-        name: Making a sale
-      -
-        id: sellall
-        name: Selling the last of your items/armor/weapons
-      -
-        id: cancelsale
-        name: Backing out of a sale
-      -
-        id: sellspecial
-        name: Trying to sell special items
-      -
-        id: sellfail
-        name: Empty slot
+    id: buymore
+    name: BUYMORE!!!
   -
-    id: talkch2
-    name: Talk - Chapter 2
+    id: talk
+    name: TALKING
     subheadings:
       -
-        id: ch2prenojevil
-        name: Before Cyber World, if you don't have Jevil's Shadow Crystal
+        id: ourdeal
+        name: OUR DEAL
       -
-        id: ch2prehavejevil
-        name: Before Cyber World, if you have Jevil's Shadow Crystal
+        id: givedisk
+        class: yellow
+        name: GIVE DISK
       -
-        id: ch2posthavejevil
-        name: After Cyber World, if you defeated Jevil but not Spamton NEO
+        id: aboutyou
+        name: ABOUT YOU
       -
-        id: ch2posthavespamton
-        name: After Cyber World, if you defeated Spamton NEO but not Jevil
+        id: knight
+        name: KNIGHT
       -
-        id: ch2posthaveboth
-        name: After Cyber World, if you defeated both Jevil and Spamton NEO
+        id: friends
+        class: yellow
+        name: FRIENDS
       -
-        id: ch2posthaveneither
-        name: After Cyber World, if you got neither Shadow Crystal
-  -
-    id: talkch4
-    name: Talk - Chapter 4
-    subheadings:
-      -
-        id: ch4standard
-        name: Standard
-      -
-        id: ch4nocrystal
-        name: If you didn't get the Knight's Shadow Crystal
-      -
-        id: ch4allcrystalsfirst
-        name: If you got all 3 Shadow Crystals, first time
-      -
-        id: ch4allcrystalsnext
-        name: If you got all 3 Shadow Crystals, subsequent times
+        id: fear
+        name: FEAR
   -
     id: exit
-    name: Exit
+    name: ESCAPE
 ---
 <section class="d-section" id="mainscreen">
 	<h2>Main screen</h2>
