Spamshop: Mark Noelle 1st entry as unused

--- a/locations/cyberworld/cybercity/spamtonshopexterior.html
+++ b/locations/cyberworld/cybercity/spamtonshopexterior.html
@@ -68,8 +68,20 @@ sources:
 	<d-option-panel index="1" theme="dark">
 		<p class="note">Dialogue ends here.</p>
 	</d-option-panel>
-	<hr class="hr2">
-	<h5 id="preentry-noelle">If Noelle is in the party</h5>
+
+	<h5 id="preentry-susral">Standard, with Susie and Ralsei in the party</h5>
+	<d-box theme="dark">
+		<d-sprite speaker="Susie" emotion="6"></d-sprite>
+		<d-text asterisk>What? You wanna go in by yourself...?</d-text>
+	</d-box>
+	<d-box theme="dark">
+		<d-sprite speaker="Susie" emotion="0"></d-sprite>
+		<d-text asterisk>... whatever. Do what you want.</d-text>
+	</d-box>
+	<p class="note">The music fades out and Kris enters the shop.</p>
+
+	<h5 id="preentry-noelle">Unused variant, with Noelle in the party</h5>
+	<p>Impossible to get since after defeating Spamton, the first time the player can backtrack to the Trash Zone is after reaching Queen's mansion, by which point Noelle has left the party.</p>
 	<d-box theme="dark">
 		<d-sprite speaker="Noelle" emotion="B"></d-sprite>
 		<d-text asterisk>Huh? You want to go in alone...?</d-text>
@@ -86,18 +98,8 @@ sources:
 		<d-sprite speaker="Noelle" emotion="D"></d-sprite>
 		<d-text asterisk>N-no, you can take your time! It's okay...</d-text>
 	</d-box>
-	<hr class="hr3">
-	<h5 id="preentry-susral">If Susie and Ralsei are in the party</h5>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="6"></d-sprite>
-		<d-text asterisk>What? You wanna go in by yourself...?</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="0"></d-sprite>
-		<d-text asterisk>... whatever. Do what you want.</d-text>
-	</d-box>
-	<hr class="hr2">
-	<p class="note">The music fades out and Kris enters the shop.</p>
+
+	<hr class="hrhalf">
 
 	<h4>Subsequent times</h4>
 	<p class="note">Kris enters the shop without commentary.</p>
