Color Addison/Swatch/Swatchling speaker labels

--- a/locations/cyberworld/queenmansion/guesthall.html
+++ b/locations/cyberworld/queenmansion/guesthall.html
@@ -448,17 +448,17 @@ see_also:
 
 	<h4>First time</h4>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="o">Swatchling</d-speaker>
 		<d-text asterisk>Did you enjoy your room?</d-text>
 	</d-box>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="o">Swatchling</d-speaker>
 		<d-text asterisk>There was a mint under your electric cage...</d-text>
 	</d-box>
 
 	<h4>Subsequent times</h4>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="o">Swatchling</d-speaker>
 		<d-text asterisk>Don't make a mistake, this is not a hotel.</d-text>
 	</d-box>
 
@@ -493,42 +493,42 @@ see_also:
 	<h4>Standard</h4>
 	<h5>First time</h5>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>This mansion used to be a luxurious home for upper class citizens.</d-text>
 	</d-box>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Your room? It belonged to a prestigious big shot...</d-text>
 	</d-box>
 
 	<h5>Subsequent times</h5>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Sadly, his name has been erased from the records...</d-text>
 	</d-box>
 
 	<h4>After defeating <a href="{{ '/story/chapter2/spamtonneo' | relative_url }}">Spamton NEO</a></h4>
 	<h5>First time</h5>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Spamton? This used to be his room...</d-text>
 	</d-box>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Though it's not like he used it, after a while.</d-text>
 	</d-box>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Eventually, he just spent all his time in the basement... praying.</d-text>
 	</d-box>
 
 	<h5>Subsequent times</h5>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>When things went downhill, he became obsessed with that artifact.</d-text>
 	</d-box>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Maybe he thought it would give him another big break?</d-text>
 	</d-box>
 
@@ -636,17 +636,17 @@ see_also:
 	<h3 id="diningswatchling1">Red Swatchling</h3>
 	<h4>First time</h4>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="r">Swatchling</d-speaker>
 		<d-text asterisk>This downstairs table will be for our special guests.</d-text>
 	</d-box>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="r">Swatchling</d-speaker>
 		<d-text asterisk>There's a dinner party on the 2nd floor for everyone else.</d-text>
 	</d-box>
 
 	<h4>Subsequent times</h4>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="r">Swatchling</d-speaker>
 		<d-text asterisk>Combined, we have enough seats for everyone in the world.</d-text>
 	</d-box>
 
@@ -655,17 +655,17 @@ see_also:
 	<h3 id="diningswatchling2">Yellow Swatchling</h3>
 	<h4>When Ralsei isn't in the party</h4>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Everything here is tailored for you... right?</d-text>
 	</d-box>
 
 	<h4>When Ralsei is in the party</h4>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Ralsei, good luck.</d-text>
 	</d-box>
 	<d-box theme="dark">
-		<d-speaker>Swatchling</d-speaker>
+		<d-speaker class="y">Swatchling</d-speaker>
 		<d-text asterisk>Although you only joined us for minutes, we'll miss you.</d-text>
 	</d-box>
 
