--- a/contribute/examples.html
+++ b/contribute/examples.html
@@ -479,17 +479,10 @@ credits: >
 <style>
 figure.highlight { margin: calc(var(--border-width) + 1em) 0 }
 :is(h2, h3, h4, p) + figure.highlight { margin-block-start: 0 }
-code {
+figure.highlight code {
 	padding: 0.5em 1em;
 	overflow-x: scroll;
 	max-width: 100%;
-}
-:not(pre) > code {
-	border: thin solid rgb(from var(--gray) r g b / 0.5);
-	border-radius: 0.25em;
-	background-color: var(--black);
-	padding: 0 0.2em;
-	font-weight: normal;
 }
 .nt { color: #6eadff }
 .na { color: #7be7eb }
