Document Ch2 mansion exploration (NR)

--- a/story/index.html
+++ b/story/index.html
@@ -136,7 +136,9 @@ items:
           -
             url: roomescape
             name: Escaping the personalized rooms
-          # 1F to susie/berdly going after noelle
+          -
+            url: mansion
+            name: Exploring 1F, 2F, and the start of 3F
           -
             url: acidtunnel
             name: Crossing the acid tunnel
