Homepage: Make encounter links relative
God Damn It

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ hide_title: true
 		<li>
 			<a href="{{ '/encounters/' | relative_url }}">Encounters</a>: Flavor text and dialogue from battles with enemies
 			<ul>
-				<li><a href="{{ '/encounters/#chapter1' }}">Chapter 1</a></li>
-				<li><a href="{{ '/encounters/#chapter2' }}">Chapter 2</a></li>
-				<li><a href="{{ '/encounters/#chapter3' }}">Chapter 3</a></li>
-				<li><a href="{{ '/encounters/#chapter4' }}">Chapter 4</a></li>
+				<li><a href="{{ '/encounters/#chapter1' | relative_url }}">Chapter 1</a></li>
+				<li><a href="{{ '/encounters/#chapter2' | relative_url }}">Chapter 2</a></li>
+				<li><a href="{{ '/encounters/#chapter3' | relative_url }}">Chapter 3</a></li>
+				<li><a href="{{ '/encounters/#chapter4' | relative_url }}">Chapter 4</a></li>
 				<li class="gray">More to be added!</li>
 			</ul>
 		</li>
