Add links to shops' buyable items

--- a/locations/cardkingdom/cardcastle/rouxlsshop.html
+++ b/locations/cardkingdom/cardcastle/rouxlsshop.html
@@ -142,24 +142,24 @@ toc:
 	<h2>Buy</h2>
 
 	<h3 id="itemlist">Items for sale</h3>
-	<h4>Rouxls Roux</h4>
+	<h4><a href="{{ '/misc/darkitems#rouxlsroux' | relative_url }}">RouxlsRoux</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>ITEM</d-text>
 		<d-text>Fragrant sauce</d-text>
 		<d-text>heals 50HP</d-text>
 	</d-box>
-	<h4>Brave Ax</h4>
+	<h4><a href="{{ '/misc/weapons#braveax' | relative_url }}">Brave Ax</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>WEAPON</d-text>
 		<d-text>Heroic &<span class="break"></span> Cool</d-text>
 	</d-box>
-	<h4>Dainty Scarf</h4>
+	<h4><a href="{{ '/misc/weapons#daintyscarf' | relative_url }}">DaintyScarf</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>WEAPON</d-text>
 		<d-text>Homemade</d-text>
 		<d-text>Healing up</d-text>
 	</d-box>
-	<h4>Amber Card</h4>
+	<h4><a href="{{ '/misc/armor#ambercard' | relative_url }}">Amber Card</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>ARMOR</d-text>
 		<d-text>Defensive charm</d-text>
