--- a/locations/cardkingdom/field/seap.html
+++ b/locations/cardkingdom/field/seap.html
@@ -149,22 +149,22 @@ toc:
 	<h2>Buy</h2>
 
 	<h3 id="itemlist">Items for sale</h3>
-	<h4>Dark Candy</h4>
+	<h4><a href="{{ '/misc/darkitems#darkcandy' | relative_url }}">Dark Candy</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>ITEM</d-text>
 		<d-text>Star-shape candy that heals 40HP</d-text>
 	</d-box>
-	<h4>Darkburger</h4>
+	<h4><a href="{{ '/misc/darkitems#darkburger' | relative_url }}">Darkburger</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>ITEM</d-text>
 		<d-text>Mysterious hamburger heals 70HP</d-text>
 	</d-box>
-	<h4>Amber Card</h4>
+	<h4><a href="{{ '/misc/armor#ambercard' | relative_url }}">Amber Card</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>ARMOR</d-text>
 		<d-text>Defensive charm</d-text>
 	</d-box>
-	<h4>Spookysword</h4>
+	<h4><a href="{{ '/misc/weapons#spookysword' | relative_url }}">Spookysword</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>WEAPON</d-text>
 		<d-text>Black-and orange</d-text>
