--- a/locations/closetworld/town/seap.html
+++ b/locations/closetworld/town/seap.html
@@ -162,37 +162,37 @@ toc:
 	<h2>Buy</h2>
 
 	<h3 id="itemlist">Items for sale</h3>
-	<h4 id="darkcandy">Dark Candy</h4>
+	<h4 id="darkcandy"><a href="{{ '/misc/darkitems#darkcandy' | relative_url }}">Dark Candy</a></h4>
 	<p>Available initially. If you recruited 9 or more Cyber World Darkners, gets replaced by the <a href="#cdbagel">CD Bagel</a> after returning from Cyber World. If you didn't recruit 9 or more Cyber World Darkners, gets replaced by <a href="#darkercandy">Darker Candy</a> from Chapter 4 onwards.</p>
 	<d-box theme="shopdesc">
 		<d-text>ITEM</d-text>
 		<d-text>Star-shape candy that heals 40HP</d-text>
 	</d-box>
-	<h4 id="darkercandy">Darker Candy</h4>
+	<h4 id="darkercandy"><a href="{{ '/misc/darkitems#darkercandy' | relative_url }}">Darker Candy</a></h4>
 	<p>Available from Chapter 4 onwards if you didn't recruit 9 or more Cyber World Darkners. Replaces <a href="#darkcandy">Dark Candy</a>.</p>
 	<d-box theme="shopdesc">
 		<d-text>ITEM</d-text>
 		<d-text>Star-shape candy that heals 120HP</d-text>
 	</d-box>
-	<h4 id="cdbagel">CD Bagel</h4>
+	<h4 id="cdbagel"><a href="{{ '/misc/darkitems#cdbagel' | relative_url }}">CD Bagel</a></h4>
 	<p>Available after sealing the Cyber World's Fountain if you recruited 9 or more Darkners there. Replaces <a href="#darkcandy">Dark Candy</a>.</p>
 	<d-box theme="shopdesc">
 		<d-text>ITEM</d-text>
 		<d-text>Music with each bite</d-text>
 		<d-text>heals 80HP</d-text>
 	</d-box>
-	<h4>Darkburger</h4>
+	<h4><a href="{{ '/misc/darkitems#darkburger' | relative_url }}">Darkburger</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>ITEM</d-text>
 		<d-text>Mysterious hamburger</d-text>
 		<d-text>heals 70HP</d-text>
 	</d-box>
-	<h4>Amber Card</h4>
+	<h4><a href="{{ '/misc/armor#ambercard' | relative_url }}">Amber Card</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>ARMOR</d-text>
 		<d-text>Defensive charm</d-text>
 	</d-box>
-	<h4>Spookysword</h4>
+	<h4><a href="{{ '/misc/weapons#spookysword' | relative_url }}">Spookysword</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>WEAPON</d-text>
 		<d-text>Black-and orange</d-text>
