--- a/locations/cyberworld/cybercity/spamtonshop.html
+++ b/locations/cyberworld/cybercity/spamtonshop.html
@@ -114,28 +114,28 @@ toc:
 	<p>Prices are listed as "&lt;#&gt; KROMER" and fluctuate every half-second. Your current money is also listed as "&lt;#&gt; KROMER". The usual "Exit" option instead reads, in an oversized font, "RUN AWAY".</p>
 
 	<h3 id="itemlist">Items for sale</h3>
-	<h4>KeyGen</h4>
+	<h4><a href="{{ '/misc/darkitems#keygen' | relative_url }}">KeyGen</a></h4>
 	<d-box theme="shopdesc">
 		<d-text>KEYITEM </d-text>
 		<d-text>100%<span class="break"></span> CERTIFIED<span class="break"></span> WAREZ</d-text>
 	</d-box>
-	<h4>S. POTION</h4>
-	<p>Actually <a href="{{ '/misc/darkitems#spoison' | relative_url }}">S.POISON</a>.</p>
+	<h4><a href="{{ '/misc/darkitems#spoison' | relative_url }}">S. POTION</a></h4>
+	<p>Actually S.POISON.</p>
 	<d-box theme="shopdesc">
 		<d-text>ITEM </d-text>
 		<d-text>ITEM</d-text>
 		<d-text>AFFECTS HP<span class="break"></span> A LOT!</d-text>
 		<d-text>THE SMOOTH<span class="break"></span> TASTE OF</d-text>
 	</d-box>
-	<h4>''THE BIG ONE''</h4>
-	<p>Actually the <a href="{{ '/misc/weapons#brokensword' | relative_url }}">Broken Sword</a>.</p>
+	<h4><a href="{{ '/misc/weapons#brokensword' | relative_url }}">''THE BIG ONE''</a></h4>
+	<p>Actually the Broken Sword.</p>
 	<d-box theme="shopdesc">
 		<d-text>CUT ANYTHING</d-text>
 		<d-text>2 PIECES!</d-text>
 		<d-text>CRIMINAL!</d-text>
 	</d-box>
-	<h4>BSHOT BOWTIE</h4>
-	<p>Actually the <a href="{{ '/misc/armor#frayedbowtie' | relative_url }}">Frayed Bowtie</a>.</p>
+	<h4><a href="{{ '/misc/armor#frayedbowtie' | relative_url }}">BSHOT BOWTIE</a></h4>
+	<p>Actually the Frayed Bowtie.</p>
 	<d-box theme="shopdesc">
 		<d-text>EXCLUSIVE<span class="break"></span> OFFICIAL<span class="break"></span> SPAMTON</d-text>
 	</d-box>
