Document Ch2 Suselle ferris wheel scene

--- a/story/index.html
+++ b/story/index.html
@@ -142,7 +142,11 @@ items:
           -
             url: acidtunnel
             name: Crossing the acid tunnel
-          # susie rescuing noelle to the final showdown against giga queen
+          -
+            url: noellerescue
+            name: Susie rescues Noelle
+          # queen fight 1
+          # the final showdown against giga queen
           # weird route...?
           -
             url: spamtonneo
