Remove leftover timer commands

--- a/encounters/shuttahislandboard.html
+++ b/encounters/shuttahislandboard.html
@@ -162,7 +162,7 @@ toc:
 	<hr class="hr2">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Tenna" emotion="0"></d-sprite>
-		<d-text asterisk>MAKE MEMORIES YOU'LL LOOK BACK ON! ^1... EVERY DAY!</d-text>
+		<d-text asterisk>MAKE MEMORIES YOU'LL LOOK BACK ON! ... EVERY DAY!</d-text>
 	</d-box>
 	<hr class="hr2">
 	<p class="note">2.97% (3/101) chance:</p>
