Remove leftover timer/linebreak commands

--- a/encounters/jigsawjoe.html
+++ b/encounters/jigsawjoe.html
@@ -294,7 +294,8 @@ toc:
 
 	<h3 id="sleepystory-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>Susie told the enemy a bedtime story about beating them up!<span class="break"></span> * The enemy became TIRED!</d-text>
+		<d-text asterisk>Susie told the enemy a bedtime story about beating them up!</d-text>
+		<d-text asterisk>The enemy became TIRED!</d-text>
 	</d-box>
 	<p class="note">Jigsaw Joe becomes <span class="blue">Tired</span> and moves at half speed.</p>
 	<hr class="hr2">
