--- a/encounters/tennacoldplace.html
+++ b/encounters/tennacoldplace.html
@@ -515,7 +515,7 @@ toc:
 	<h3 id="check-ft">Flavor text</h3>
 	<h4>Standard</h4>
 	<d-box theme="battlemenu">
-		<d-text asterisk>TENNA - Isn't it about time you&got a new TV?</d-text>
+		<d-text asterisk>TENNA - Isn't it about time you got a new TV?</d-text>
 	</d-box>
 
 	<h4>If <a href="{{ '/misc/armor#dealmaker' | relative_url }}">Dealmaker</a> is equipped to any party member</h4>
