Fix Tasque Manager Devilsknife dialogue
Was leftover as a duplicate of the Jevilstail dialogue. Now fixed!

--- a/encounters/tasquemanager.html
+++ b/encounters/tasquemanager.html
@@ -211,7 +211,7 @@ toc:
 	<h3 id="dialogue-devilsknife">Turn 1, if the <a href="{{ '/misc/weapons#devilsknife' | relative_url }}">Devilsknife</a> is equipped to Susie</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Tasque Manager</d-speaker>
-		<d-text>Chaos, chaos!?<span class="break"></span> No, no! Order, order!<span class="break"></span> Now get rid of that<span class="break"></span> silly tail!</d-text>
+		<d-text>Chaos, chaos!?<span class="break"></span> No, no! Order, order!<span class="break"></span> Now get rid of that<span class="break"></span> silly Devilsknife!</d-text>
 	</d-box>
 
 	<hr>
