Add generic forcefield narration

--- a/misc/generic.html
+++ b/misc/generic.html
@@ -25,6 +25,10 @@ sources:
     chapters: [1, 2, 3, 4]
     note: warp doors (selecting a location)
   -
+    name: gml_Object_obj_forcefield_Other_10
+    chapters: [2]
+    note: forcefields
+  -
     name: gml_Object_obj_cybercity_trashcan_Other_10
     chapters: [2]
     note: trash cans
@@ -98,6 +102,9 @@ toc:
           -
             id: warpdoor-fallback
             name: Unused fallback
+  -
+    id: forcefield
+    name: Forcefields
   -
     id: trashcan
     name: Trash cans
@@ -311,6 +318,15 @@ toc:
 	<p>For choosing an option that's not accounted for by the code.</p>
 	<d-box theme="dark">
 		<d-text asterisk>(But nothing happened.)</d-text>
+	</d-box>
+</section>
+
+<section class="d-section" id="forcefield">
+	<h2>Forcefields</h2>
+	<p>Used by all forcefields except those in the <a href="{{ '/story/chapter2/drive#DECEMBER' | relative_url }}">DECEMBER puzzle</a>.</p>
+
+	<d-box theme="dark">
+		<d-text asterisk>(It appears to be some kind of forcefield.)</d-text>
 	</d-box>
 </section>
 
