--- a/misc/index.html
+++ b/misc/index.html
@@ -85,6 +85,8 @@ items:
             url: vendingmachine
             name: Vending machines
             splitter: "#"
+          -
+            name: <span class="gray">…and more</span>
         # what else is generic?
   -
     id: other
