Mark Ch2 forcefields as using generic text

--- a/locations/cyberworld/queenmansion/basement.html
+++ b/locations/cyberworld/queenmansion/basement.html
@@ -108,7 +108,7 @@ toc:
 
 <section class="d-section" id="forcefield">
 	<h2>Forcefield</h2>
-	<p>Initially blocking the way to the eastern side of the basement; disappears after its power source is turned off on the western side.</p>
+	<p>Initially blocking the way to the eastern side of the basement; disappears after its power source is turned off on the western side. Uses <a href="{{ '/misc/generic#forcefield' | relative_url }}">generic text</a>.</p>
 
 	<d-box theme="dark">
 		<d-text asterisk>(It appears to be some kind of forcefield.)</d-text>
