Document Queen's mansion entrance hall

--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -38,6 +38,9 @@ items:
             url: guesthall
             name: Guest Hall
           -
+            url: entrance
+            name: Entrance
+          -
             url: colorcafe
             name: Color Cafe
       -
