--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -36,13 +36,16 @@ items:
         sublist:
           -
             url: guesthall
-            name: Guest Hall
+            name: Guest Hall{END_LINK} (west wing)
           -
             url: entrance
             name: Entrance
           -
             url: colorcafe
             name: Color Cafe
+          -
+            url: 1F
+            name: 1F proper{END_LINK} (east wing)
       -
         url: basement
         name: Basement
