Document Queen's mansion 2F

--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -47,6 +47,9 @@ items:
             url: 1F
             name: 1F proper{END_LINK} (east wing)
       -
+        url: 2F
+        name: 2F
+      -
         url: basement
         name: Basement
 ---
