Document Queen's mansion 4F

--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -50,6 +50,9 @@ items:
         url: 2F
         name: 2F
       -
+        url: 4F
+        name: 4F
+      -
         url: basement
         name: Basement
 ---
