K/S castle town room: Crosslink Susie-like/ICE-E statue to 4F origins

--- a/locations/closetworld/castle/krisroom.html
+++ b/locations/closetworld/castle/krisroom.html
@@ -255,7 +255,7 @@ toc:
 
 <section class="d-section" id="icee">
 	<h2>ICE-E statue</h2>
-	<p>Present after leaving Cyber World, if you inspected the ICE-E statue in Queen's mansion. Not present in Kris and Susie's combined room.</p>
+	<p>Present after leaving Cyber World, if you inspected the <a href="{{ '/locations/cyberworld/queenmansion/4F#icee' | relative_url}}">ICE-E statue in Queen's mansion</a>. Not present in Kris and Susie's combined room.</p>
 
 	<d-box theme="dark">
 		<d-text asterisk>(This maybe isn't the best thing in your room.)</d-text>
