--- a/locations/closetworld/castle/susieroom.html
+++ b/locations/closetworld/castle/susieroom.html
@@ -207,7 +207,7 @@ toc:
 
 <section class="d-section" id="statue">
 	<h2>Statue</h2>
-	<p>Present after leaving Cyber World, if you inspected the Susie-like statue in Queen's mansion. Not present in Kris and Susie's combined room.</p>
+	<p>Present after leaving Cyber World, if you inspected the <a href="{{ '/locations/cyberworld/queenmansion/4F#statue' | relative_url }}">Susie-like statue in Queen's mansion</a>. Not present in Kris and Susie's combined room.</p>
 
 	<h3>First time</h3>
 	<d-box theme="dark">
