Queen's mansion 4F: Add see-also to 3F
Gotta crosslink the areas accessible to each other

--- a/locations/cyberworld/queenmansion/4F.html
+++ b/locations/cyberworld/queenmansion/4F.html
@@ -7,6 +7,11 @@ description: >
 credits: >
   <p>Compiled by wovenstarlight.</p>
 
+see_also:
+  -
+    url: /locations/cyberworld/queenmansion/3F
+    name: Queen's mansion - 3F
+
 sources:
   -
     name: gml_GlobalScript_scr_roomname
