Document Lancer's Castle Town room

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -37,6 +37,9 @@ items:
           -
             url: krissusieroom
             name: Kris and Susie's combined room{END_LINK} (Chapter 4 only)
+          -
+            url: lancerroom
+            name: Lancer's room
       -
         name: 3F
         sublist:
